# bevy_lazy_prefabs

./: Cargo.toml  README.md
assets/: hello_world.prefab
assets/prefabs/: cube.prefab
examples/: cube.rs  hello.rs  nested.rs  sprite.rs  sword.rs
src/: bevy_commands.rs  build_commands.rs  dynamic_cast.rs  lazy_prefabs.pest  lib.rs  parse.rs  plugin.rs  prefab.rs  registry.rs
