[package]
name = "bevy_lazy_prefabs"
version = "0.2.1"
edition = "2021"
description = "Simple readable/writable prefab text files in bevy."
authors = ["sark"]
homepage = "https://github.com/sarkahn/bevy_lazy_prefabs"
repository = "https://github.com/sarkahn/bevy_lazy_prefabs"
license = "MIT"


[dependencies]
bevy = { version = "0.9.1" }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.30"
derivative = "2.2.0"
futures-lite = "1.12.0"

[dev-dependencies]
bevy = { version = "0.9.1" }